# zarrdump

./: README.md  pyproject.toml  requirements.txt  zarrdump.py
zarrdump/: __main__.py
